Add: font-size variables and button reset styles

--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -19,6 +19,11 @@ ol {
   list-style: none;
 }
 
+button {
+  outline: 0;
+  border: none;
+}
+
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
     html:focus-within {
