Style: logo, title, and dropdown
Added styling to logo, title, and menu section and add dropdown component

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -6,4 +6,16 @@ html {
 
 body {
     font-family: $ff-primary, 'Franklin Gothic Medium', Arial, sans-serif;
+    color: $c-whool-white;
+}
+
+h1 {
+    font-size: $fs-600;
+    font-weight: $fw-bold;
+}
+
+h2 {
+    font-size: $fs-600;
+    font-weight: $fw-medium;
+    text-transform: uppercase;
 }
