Add: components folder
Created seperate directory for components.

--- a/src/sass/components/_dropdown.scss
+++ b/src/sass/components/_dropdown.scss
@@ -28,6 +28,12 @@
             padding-inline: .8em;
             font-weight: $fw-regular;
             color: $c-light-gray;
+            cursor: pointer;
+            filter: brightness(.8);
+
+            &:hover {
+                filter: brightness(1);
+            }
         }
 
     }
