--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -7,7 +7,7 @@ html {
 body {
     font-family: $ff-primary, 'Franklin Gothic Medium', Arial, sans-serif;
     font-weight: $fw-regular;
-    color: $c-whool-white;
+    color: $c-wool-white;
 }
 
 h1 {
