--- a/src/sass/components/_dropdown.scss
+++ b/src/sass/components/_dropdown.scss
@@ -12,7 +12,7 @@
         font-size: $fs-300;
         padding-block: 1em;
         background-color: transparent;
-        color: $c-whool-white;
+        color: $c-wool-white;
         display: flex;
         justify-content: space-between;
         align-items: center;
