--- a/src/sass/components/_secondaryButton.scss
+++ b/src/sass/components/_secondaryButton.scss
@@ -5,7 +5,7 @@
     font-size: $fs-300;
     font-weight: $fw-regular;
     padding: 1em;
-    color: $c-whool-white;
+    color: $c-wool-white;
     background-color: transparent;
     outline: 2px solid $c-grayish-green;
     flex-grow: 1;
