--- a/src/sass/components/_visualize.scss
+++ b/src/sass/components/_visualize.scss
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
     gap: 1em;
-    background-color: $c-whool-white;
+    background-color: $c-wool-white;
     text-transform: uppercase;
 
     &__text {
