--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -8,7 +8,7 @@
         width: 100%;
         height: 64px;
         background-color: transparent;
-        color: $c-whool-white;
+        color: $c-wool-white;
         outline: 1px dashed $c-grayish-green;
     }
 
