--- a/src/sass/utilities/_variables.scss
+++ b/src/sass/utilities/_variables.scss
@@ -1,5 +1,5 @@
 $c-chaos-black: hsl(60, 7%, 6%);
-$c-whool-white: hsl(60, 100%, 95%);
+$c-wool-white: hsl(60, 100%, 95%);
 $c-grayish-green: hsl(60, 6%, 35%);
 $c-light-gray: hsl(0, 0%, 90%);
 
