Feat: responsive on most screen sizes
Added desktop layout and improved responsivness

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -19,6 +19,10 @@ h2 {
     font-size: $fs-600;
     font-weight: $fw-medium;
     text-transform: uppercase;
+
+    @include breakpoint(lg) {
+        font-size: $fs-700;
+    }
 }
 
 button {
