--- a/src/sass/components/_dropdown.scss
+++ b/src/sass/components/_dropdown.scss
@@ -3,7 +3,7 @@
 
 .dropdown {
     width: 100%;
-    outline: 2px solid $c-grayish-green;
+    outline: 1px solid $c-wool-white;
     padding-inline: .8em;
 
     &__button {
@@ -26,7 +26,7 @@
         overflow-y: hidden;
 
         .option {
-            padding-block: .2em;
+            padding-block: .3em;
             padding-inline: .8em;
             font-weight: $fw-light;
             color: $c-light-gray;
@@ -36,6 +36,7 @@
             &:hover {
                 filter: brightness(1);
             }
+
         }
 
     }
