--- a/src/sass/layout/_app.scss
+++ b/src/sass/layout/_app.scss
@@ -17,39 +17,34 @@ body {
     grid-template-rows: auto auto 1fr;
     grid-template-columns: auto 1fr;
 
-    @include breakpoint(md) {
+    @include breakpoint(lg) {
         grid-template-areas:
         "logo title"
         "menu grid";
         grid-template-rows: 80px 1fr;
-        grid-template-columns: 250px 1fr;
+        grid-template-columns: auto 1fr;
         background-color: $c-chaos-black;
     }
 
     &__logo {
         grid-area: logo;
-        // outline: 2px solid red;
-        padding-block: 1rem;
-        padding-inline: 1.5rem;
-        display: flex;
-        align-items: center;
         border-right: 1px solid $c-grayish-green;
+        border-bottom: 1px solid $c-grayish-green;
     }
 
     &__title {
         grid-area: title;
-        padding: 1em;
-        // outline: 2px solid blue;
-
-        .title {
-            text-align: center;
-        }
+        border-bottom: 1px solid $c-grayish-green;
     }
 
     &__menu {
-        // margin-top: 2rem;
-        grid-area: menu;
-        outline: 1px solid $c-grayish-green;
+       grid-area: menu;
+       outline: 1px solid $c-grayish-green;
+
+        @include breakpoint(lg) {
+            outline: 0;
+            border-right: 1px solid $c-grayish-green;
+        }
     }
 
     &__grid {
