Refactor: BFS finder and add more custom classes
Now the visualised path will not include the start and end nodes

--- a/src/sass/utilities/_helpers.scss
+++ b/src/sass/utilities/_helpers.scss
@@ -17,3 +17,16 @@
     background-color: crimson;
     cursor:move !important;
 }
+
+.searching {
+    background-color: yellow;
+}
+
+.visited {
+    background-color: blue;
+}
+
+.path {
+    background-color: orange;
+    position: relative;
+}
