--- a/src/sass/utilities/_helpers.scss
+++ b/src/sass/utilities/_helpers.scss
@@ -1,4 +1,5 @@
 @use "variables" as *;
+@use "animations" as *;
 
 .wall {
     background-color: $c-wool-white;
@@ -14,23 +15,39 @@
 }
 
 .end {
-    background-color: crimson;
+    background-color: #fb3640;
     cursor:move !important;
 }
 
 .searching {
-    background-color: yellow;
+        background-color: #E3FFF6;
+        background-color: yellow;
+        animation: scaleOut .5s cubic-bezier(0.215, 0.610, 0.355, 1) infinite forwards;
 }
 
 .visited {
+    background-color: #1A1AA7;
     background-color: blue;
+    animation: scaleIn 0.3s cubic-bezier(0.215, 0.610, 0.355, 1) forwards;
 }
 
 .path {
-    background-color: orange;
+    background-color: #FF5CFF;
+    outline: 1px solid #FF5CFF !important;
     position: relative;
 }
 
+.path:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 4px;
+    height: 4px;
+    border-radius: 5px;
+    background-color: $c-wool-white;
+    animation: pulse 1s cubic-bezier(0.215, 0.610, 0.355, 1) infinite forwards;
+}
 
 .open {
     max-height: none !important;
