--- a/src/sass/utilities/_helpers.scss
+++ b/src/sass/utilities/_helpers.scss
@@ -3,6 +3,7 @@
 
 .wall {
     background-color: $c-wool-white;
+    animation: wallAnimation .3s cubic-bezier(0.215, 0.610, 0.355, 1) forwards;
 }
 
 .empty {
