--- a/src/sass/components/_dropdown.scss
+++ b/src/sass/components/_dropdown.scss
@@ -4,18 +4,24 @@
 .dropdown {
     width: 100%;
     outline: 1px solid $c-wool-white;
-    padding-inline: .8em;
 
     &__button {
         width: 100%;
         font-weight: $fw-regular;
         font-size: $fs-300;
-        padding-block: 1em;
+        padding: 1em .8em;
         background-color: transparent;
         color: $c-wool-white;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+    }
+
+    &__chevron {
+        transition: transform 0.4s cubic-bezier(0.17, 0.61, 0.11, 1.02);
     }
 
     &__menu {
@@ -24,10 +30,10 @@
         gap: .4em;
         max-height: 0;
         overflow-y: hidden;
+        transition: max-height 0.5s cubic-bezier(0.17, 0.61, 0.47, 1.01);
 
         .option {
-            padding-block: .3em;
-            padding-inline: .8em;
+            padding: 0.3em 1.8em;
             font-weight: $fw-light;
             color: $c-light-gray;
             cursor: pointer;
