--- a/src/sass/utilities/_animations.scss
+++ b/src/sass/utilities/_animations.scss
@@ -49,6 +49,20 @@
     }
 }
 
+@keyframes rightLeft {
+  0% {
+    transform: translateX(0px) rotate(-90deg) scale(0.75);
+  }
+
+  50% {
+    transform: translateX(5px) rotate(-90deg) scale(0.75);
+  }
+
+  100% {
+   transform: translateX(0px) rotate(-90deg) scale(0.75); 
+  }
+}
+
 @keyframes ripple {
   to {
     transform: scale(3);
