--- a/src/sass/utilities/_variables.scss
+++ b/src/sass/utilities/_variables.scss
@@ -2,6 +2,10 @@ $c-chaos-black: hsl(60, 7%, 6%);
 $c-wool-white: hsl(60, 100%, 95%);
 $c-grayish-green: hsl(60, 6%, 35%);
 $c-light-gray: hsl(0, 0%, 90%);
+$c-cathode-green: hsl(137, 100%, 50%);
+$c-devils-advocate: hsl(357, 96%, 60%);
+$c-usc-gold: hsl(48, 100%, 50%);
+$c-neo-mint: hsl(148, 98%, 81%);
 
 
 $ff-primary: GeneralSans;
