Fix: search and path animation speed

--- a/src/sass/utilities/_animations.scss
+++ b/src/sass/utilities/_animations.scss
@@ -30,7 +30,7 @@
 
 @keyframes scaleOut {
   from {
-    transform: scale(.25);
+    transform: scale(0.3);
     background-color: yellow;
     border-radius: 100%;
   }
