Style: add padding-bottom to menu option

--- a/src/sass/components/_dropdown.scss
+++ b/src/sass/components/_dropdown.scss
@@ -39,6 +39,10 @@
             cursor: pointer;
             filter: brightness(.8);
 
+            &:last-of-type {
+                padding-bottom: 0.8em;
+            }
+
             &:hover {
                 filter: brightness(1);
             }
